--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     tools:openDrawer="start">
 
     <!--FrameLayout is for the button to show up properly-->
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -42,43 +42,103 @@
 
         </LinearLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_main3"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="27dp"
-            android:elevation="16dp"
-            android:src="@drawable/ic_add" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_main2"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="27dp"
-            android:elevation="16dp"
-            android:src="@drawable/ic_add" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_main1"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="27dp"
-            android:elevation="16dp"
-            android:src="@drawable/ic_add" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_main"
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="21dp"
-            android:elevation="16dp"
-            android:src="@drawable/ic_add" />
+            android:id="@+id/fab_main"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Actions"
+            android:gravity="end"
+            app:icon="@drawable/ic_add"/>
 
-    </FrameLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_main_add_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/fab_main"
+            app:layout_constraintEnd_toEndOf="@id/fab_main"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/ic_add"
+            app:fabSize="normal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fab_main_add_location_text"
+            android:text="Add location"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/fab_main_add_location"
+            app:layout_constraintEnd_toStartOf="@+id/fab_main_add_location"
+            app:layout_constraintTop_toTopOf="@+id/fab_main_add_location"
+            android:textColor="@android:color/black"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_main_add_hive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/fab_main_add_location"
+            app:layout_constraintEnd_toEndOf="@id/fab_main_add_location"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/ic_add"
+            app:fabSize="normal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fab_main_add_hive_text"
+            android:text="Add hive"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/fab_main_add_hive"
+            app:layout_constraintEnd_toStartOf="@+id/fab_main_add_hive"
+            app:layout_constraintTop_toTopOf="@+id/fab_main_add_hive"
+            android:textColor="@android:color/black"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_main_record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/fab_main_add_hive"
+            app:layout_constraintEnd_toEndOf="@id/fab_main_add_hive"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/ic_add"
+            app:fabSize="normal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fab_main_record_text"
+            android:text="Add record"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/fab_main_record"
+            app:layout_constraintEnd_toStartOf="@+id/fab_main_record"
+            app:layout_constraintTop_toTopOf="@+id/fab_main_record"
+            android:textColor="@android:color/black"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_main_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/fab_main_record"
+            app:layout_constraintEnd_toEndOf="@id/fab_main_record"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/ic_add"
+            app:fabSize="normal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fab_main_view_text"
+            android:text="View hive"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/fab_main_view"
+            app:layout_constraintEnd_toStartOf="@+id/fab_main_view"
+            app:layout_constraintTop_toTopOf="@+id/fab_main_view"
+            android:textColor="@android:color/black"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <!--navigation drawer with header and menu inside-->
