--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -6,20 +6,69 @@
     android:layout_height="match_parent"
     tools:context=".SelectActivity">
 
-    <TextView
-        android:id="@+id/tv_select"
+
+    <ExpandableListView
+        android:id="@+id/expandableListViewSelect"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="SELECT"/>
+        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="0.5dp" />
 
-    <Button
-        android:id="@+id/button_go"
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="GO"
+        android:id="@+id/fab_select"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Actions"
+        android:gravity="end"
+        app:icon="@drawable/ic_add"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_select_add_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/fab_select"
+        app:layout_constraintEnd_toEndOf="@id/fab_select"
+        android:layout_marginBottom="24dp"
+        android:src="@drawable/ic_add"
+        app:fabSize="normal"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab_select_add_location_text"
+        android:text="Add location"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/fab_select_add_location"
+        app:layout_constraintEnd_toStartOf="@+id/fab_select_add_location"
+        app:layout_constraintTop_toTopOf="@+id/fab_select_add_location"
+        android:textColor="@android:color/black"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_select_add_hive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/fab_select_add_location"
+        app:layout_constraintEnd_toEndOf="@id/fab_select_add_location"
+        android:layout_marginBottom="24dp"
+        android:src="@drawable/ic_add"
+        app:fabSize="normal"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab_select_add_hive_text"
+        android:text="Add hive"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/fab_select_add_hive"
+        app:layout_constraintEnd_toStartOf="@+id/fab_select_add_hive"
+        app:layout_constraintTop_toTopOf="@+id/fab_select_add_hive"
+        android:textColor="@android:color/black"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
