--- a/app/src/main/res/layout/activity_add_hive.xml
+++ b/app/src/main/res/layout/activity_add_hive.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="@+id/spinnerLocations" />
 
     <EditText
-        android:id="@+id/editTextName"
+        android:id="@+id/add_hive_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/spinnerLocations" />
 
     <EditText
-        android:id="@+id/editTextRow"
+        android:id="@+id/add_hive_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -58,7 +58,7 @@
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextName" />
+        app:layout_constraintTop_toBottomOf="@+id/add_hive_name" />
 
     <TextView
         android:id="@+id/textViewAgresivnost"
@@ -82,9 +82,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
+        android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewAgresivnost"
-        app:layout_constraintTop_toBottomOf="@+id/editTextRow" />
+        app:layout_constraintTop_toBottomOf="@+id/add_hive_row" />
 
     <TextView
         android:id="@+id/textViewStavZasob"
@@ -108,6 +109,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
+        android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewStavZasob"
         app:layout_constraintTop_toBottomOf="@+id/ratingBarAgresivnost" />
@@ -134,6 +136,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
+        android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewMezolitostPlodu"
         app:layout_constraintTop_toBottomOf="@+id/ratingBarStavZasob" />
@@ -160,6 +163,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
+        android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewSilaVcelstva"
         app:layout_constraintTop_toBottomOf="@+id/ratingBarMezolitostPlodu" />
@@ -186,6 +190,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
+        android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewStavebniPud"
         app:layout_constraintTop_toBottomOf="@+id/ratingBarSilaVcelstva" />
@@ -212,6 +217,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
+        android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewBodavost"
         app:layout_constraintTop_toBottomOf="@+id/ratingBarStavebniPud" />
@@ -238,6 +244,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
+        android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textSlidivost"
         app:layout_constraintTop_toBottomOf="@+id/ratingBodavost" />
