--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".TimelineFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="TIMELINE" />
-
+        android:id="@+id/list_view_dashboard_timeline"/>
 </FrameLayout>
