Filled in the rest, added Alerts

--- a/app/src/main/res/layout/activity_object.xml
+++ b/app/src/main/res/layout/activity_object.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ObjectActivity">
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -28,14 +29,27 @@
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_object"
+            android:id="@+id/fab_object_add_record"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="21dp"
-            android:elevation="16dp"
-            android:src="@drawable/ic_add" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="24dp"
+            android:layout_marginEnd="24dp"
+            android:src="@drawable/ic_add"
+            app:fabSize="normal"/>
 
-    </FrameLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fab_select_add_hive_text"
+            android:text="Add record"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/fab_object_add_record"
+            app:layout_constraintEnd_toStartOf="@+id/fab_object_add_record"
+            app:layout_constraintTop_toTopOf="@+id/fab_object_add_record"
+            android:textColor="@android:color/black"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
