--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -53,4 +53,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSelectDate" />
 
+    <Button
+        android:id="@+id/buttonAddAlert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/add_record_edit_text_record"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:text="Add alert" />
+
+    <ListView
+        android:id="@+id/add_record_list_view_alerts"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@id/buttonAddRecord"
+        app:layout_constraintTop_toBottomOf="@id/buttonAddAlert"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
