--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -10,11 +10,12 @@
         android:id="@+id/buttonAddRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:text="Add record"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_record_list_view_alerts" />
 
     <TextView
         android:id="@+id/add_record_text_view_date"
@@ -46,12 +47,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
+        android:maxLines="8"
         android:gravity="start|top"
         android:hint="Type in record data"
         android:inputType="textMultiLine"
+        android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSelectDate" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSelectDate"
+        app:layout_constraintBottom_toTopOf="@id/buttonAddAlert"/>
 
     <Button
         android:id="@+id/buttonAddAlert"
@@ -67,11 +71,8 @@
         android:id="@+id/add_record_list_view_alerts"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/buttonAddAlert"
         app:layout_constraintBottom_toTopOf="@id/buttonAddRecord"
-        app:layout_constraintTop_toBottomOf="@id/buttonAddAlert"/>
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
